# lab06

./: CMakeLists.txt  CPack.cmake  CPackConfig.cmake  README.md
.github/workflows/: build.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
